# wasm_laughing_man_demo_v2

./: Cargo.toml  index.html  readme.md
src/: canvas_app.rs  error.rs  header.rs  main.rs  reuse_interval.rs
src/canvas_app/: dom_utils.rs  laughing_man_image.rs  options.rs  side_menu.rs  sidemenu.rs  tracker.rs  video_face_tracker.rs
src/canvas_app/tracker/: tracker_roi.rs
src/canvas_app/video_face_tracker/: face_detection.rs  tracker.rs  tracker_roi.rs
src/header/: hamburger_button.rs
styles/: canvas_app.scss  header.scss  index.scss
