[package]
name = "leptos_simple_template"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
leptos = { version = "0.3.0", features = ["stable"]}
wasm-bindgen = "0.2.86"
wasm-bindgen-futures = "0.4.36"
thiserror = "1.0.40"
rustface = "0.1.7"
bytes = "1.1.0"
reqwest = "0.11.17"
web-sys = {version = "0.3.55", features = [
    'CanvasRenderingContext2d',
    'Document',
    'HtmlCanvasElement',
    'Window',
    'Performance',
    'Navigator',
    'HtmlVideoElement',
    'MediaStreamConstraints',
    'MediaStream',
    'MediaDevices',
    'ImageData',
    'HtmlElement',
    'Element',
    'HtmlImageElement',
    'CssStyleDeclaration',
    'Node'
]}
console_log = "1.0.0"
log = "0.4.17"
js-sys = "0.3.63"

[profile.release]
# less code to include into binary
# panic = 'abort'
# optimization over all codebase ( better optimization, slower build )
# codegen-units = 1
# optimization for size ( more aggressive )
# opt-level = 'z'
opt-level = 3
# link time optimization using using whole-program analysis
# lto = true
